--- a/app/src/main/res/layout/activity_spo2.xml
+++ b/app/src/main/res/layout/activity_spo2.xml
@@ -88,7 +88,7 @@
                     android:singleLine="true"
                     android:inputType="numberDecimal"
                     android:layout_height="wrap_content"
-                    android:text="67"
+                    android:text="@{viewmodel.spo2}"
                     android:hint="Spo2 (%)" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -109,7 +109,7 @@
                     android:singleLine="true"
                     android:inputType="numberDecimal"
                     android:layout_height="wrap_content"
-                    android:text="67"
+                    android:text="@{viewmodel.pulse}"
                     android:hint="Pulse in bpm" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -247,6 +247,7 @@
                     android:id="@+id/etnotes"
                     android:layout_width="match_parent"
                     android:textColor="@color/black"
+                    android:text="@{viewmodel.note}"
                     android:layout_height="wrap_content"
                     android:hint="Add Note" />
             </com.google.android.material.textfield.TextInputLayout>
