--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,12 +50,41 @@
                         xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:app="http://schemas.android.com/apk/res-auto">
 
+                        <com.google.android.material.tabs.TabLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tabLayouthome"
+                            app:tabTextColor="@color/gray"
+                            app:tabSelectedTextColor="@color/white"
+                            app:tabIndicatorHeight="0dp"
+                            app:tabIndicatorColor="@color/white"
+                            app:tabBackground="@color/purple_700"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent">
+
+
+                            <com.google.android.material.tabs.TabItem
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/home"/>
+
+                            <com.google.android.material.tabs.TabItem
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/analytics"/>
+
+                        </com.google.android.material.tabs.TabLayout>
+
+
+
                         <com.google.android.material.bottomnavigation.BottomNavigationView
                             android:id="@+id/nav_view"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="0dp"
                             android:layout_marginEnd="0dp"
+                            android:visibility="gone"
                             android:background="?android:attr/windowBackground"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -65,20 +94,11 @@
                         <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
+                            android:id="@+id/framelayout"
+                            app:layout_constraintTop_toBottomOf="@+id/tabLayouthome"
                             app:layout_constraintBottom_toTopOf="@id/nav_view"
                             app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <fragment
-                                android:id="@+id/nav_host_fragment"
-                                android:name="androidx.navigation.fragment.NavHostFragment"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                app:defaultNavHost="true"
-                                app:navGraph="@navigation/mobile_navigation">
-
-                            </fragment>
+                            app:layout_constraintRight_toRightOf="parent">
 
                         </FrameLayout>
 
