--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,8 +52,7 @@
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
 
-    <style name="MyActionBarTitleText"
-        parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+    <style name="MyActionBarTitleText" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -66,7 +65,17 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
+
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/white</item>
     </style>
+
+    <style name="Theme.Spo2PulseRate.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Spo2PulseRate.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Spo2PulseRate.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
