--- a/app/src/main/res/layout/row_showtimeline.xml
+++ b/app/src/main/res/layout/row_showtimeline.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linshowtimeline"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
