--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,8 +108,8 @@
                         android:layout_alignParentEnd="true"
                         fab:menu_fab_size="normal"
                         android:layout_margin="16dp"
-                        fab:menu_colorNormal="#03DAC5"
-                        fab:menu_colorPressed="#03DAC5"
+                        fab:menu_colorNormal="@color/teal_700"
+                        fab:menu_colorPressed="@color/teal_700"
                         fab:menu_colorRipple="#99FFFFFF"
                         fab:menu_showShadow="true"
                         fab:menu_shadowColor="#ffff"
