--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape android:shape="rectangle">
-            <solid android:color="#BF7B76" />
+            <solid android:color="#FFFF" />
         </shape>
     </item>
     <item  android:gravity="center" >
